--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             // ここでクリア時の特別な画像などを読み込む
             const clearImage = document.getElementById('clear-image');
             // 例として、かわいい動物のイラストにしてみます。
-           clearImage.src = 'artist_sincos, 1girl, color, nsfw, 1boy s-2889632285.png';
+           clearImage.src = 'artist_sincos, 1girl, color,  s-2180186998.png';
         }
 
         // 初期描画
